Bug 869735 - Fixes to ParallelArray compilation to support generational GC; r=nmatsakis

--HG--
extra : rebase_source : 41b4380630b0f47326a707a15b597ce22bb24caa